--- a/index.html
+++ b/index.html
@@ -305,7 +305,10 @@
                             <p class="contacts-date">Front End</p>
                         </li>
                         <li class="contacts-item">
-                            <p class="contacts-date">tel +38063-999-99</p>
+                            <!-- <p class="contacts-date">tel +38063-999-99</p> -->
+                            <p class="contacts-date">
+                                <a href="#">1-555-555-5555</a>
+                            </p>
                         </li>
                         <li class="contacts-item">
                             <p class="contacts-date">frontend@gmail.com</p>
